# supercomputer_technologies

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: DartConfiguration.tcl  Makefile
_codeql_build_dir/assignments/assignment1/: DartConfiguration.tcl  Makefile  assignment1  assignment1_tests
_codeql_build_dir/assignments/assignment2/: DartConfiguration.tcl  Makefile  assignment2  assignment2_tests
_codeql_build_dir/assignments/assignment3-task1/: DartConfiguration.tcl  Makefile  assignment3-task1  assignment3_task1_tests
assignments/assignment1/: CMakeLists.txt  README.md
assignments/assignment1/doc/: overview.md
assignments/assignment1/include/assignment1/: logger.h  pi.h
assignments/assignment1/src/: logger.cpp  main.cpp  pi.cpp
assignments/assignment1/tests/: unit_tests.cpp
assignments/assignment2/: CMakeLists.txt  README.md
assignments/assignment2/doc/: overview.md
assignments/assignment2/include/assignment2/: logger.h  matrix.h
assignments/assignment2/src/: logger.cpp  main.cpp  matrix.cpp
assignments/assignment2/tests/: unit_tests.cpp
assignments/assignment3-task1/: CMakeLists.txt  README.md
assignments/assignment3-task1/doc/: overview.md
assignments/assignment3-task1/include/assignment3_task1/: logger.h  pi.h
assignments/assignment3-task1/src/: logger.cpp  main.cpp  pi.cpp
assignments/assignment3-task1/tests/: unit_tests.cpp
assignments/assignment3-task2/: CMakeLists.txt  README.md
assignments/assignment3-task2/doc/: overview.md
assignments/assignment3-task2/include/assignment3_task2/: logger.h  matrix.h
assignments/assignment3-task2/src/: logger.cpp  main.cpp  matrix.cpp
assignments/assignment3-task2/tests/: unit_tests.cpp
scripts/: script_assignment1.cpp  script_assignment2.cpp  script_assignment3_task1.cpp
