cmake_minimum_required(VERSION 3.8.2)
project(supercomputer_technologies LANGUAGES C CXX)
if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
  message(FATAL_ERROR "Out-of-source builds only. Use: cmake -S . -B build")
endif()
set(CMAKE_CXX_STANDARD 98)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
include(CTest)
add_subdirectory(assignments/assignment1)
